--- a/0.md
+++ b/0.md
@@ -1,11 +1,21 @@
-# リンクまとめ
+# プログラミング関係ノートまとめ
+
+
+## <a style="color: red; display: block; margin-left: 20px;" target="_blank" href="https://qiita.com/">Qiita</a>
+
+* <a target="_blank" href="https://qiita.com/hiroyuki_hon/items/f2a779bb295fd12646ab">Markdownの書き方</a> 
 
 ## [Python](Python/0.md)
 
-## [Laravel](Laravel/0.md)
 
-## 
+## [PHP/Laravel](Laravel/0.md)
 
+
+## [Ruby/Ruby on Rails](Ruby/0.md)
+
+
+## その他
+
+* [構文簡易まとめ](SyntaxSummary.md)
 * [本棚アプリ(Bookshelf.md)](Bookshelf.md)
 * [本棚アプリ1(Bookshelf.md)](Bookshelf_1.md)
-
