--- a/Python/0.md
+++ b/Python/0.md
@@ -1,7 +1,12 @@
 # Python
 
+<script>
+document.title = 'Pythonまとめ';
+</script>
+
+
 * [クラス，オブジェクト](class_object.md)
 * [外部ファイルの読み込み](import_files.md)
-* []()
+* [exeファイルへの変換](to_exe.md)
 * [AIのためのPythonライブラリ](library_for_AI.md)
 * []()
