--- a/0.md
+++ b/0.md
@@ -1,5 +1,9 @@
 # プログラミング関係ノートまとめ
 
+<script>
+document.title = 'プログラミング関係ノートまとめ';
+</script>
+
 
 ## <a style="color: red; display: block; margin-left: 20px;" target="_blank" href="https://qiita.com/">Qiita</a>
 
